finished video details component

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+
+}
+
+body{
+  background: rgb(255,255,255);
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(249,249,249,1) 46%);
 }
 
 .rotate{
